--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -19,7 +19,7 @@
     @apply bg-white shadow-2xl h-[530px] w-[345px] rounded-3xl p-4;
   }
   .form-input {
-    @apply py-1.5 px-0 mb-4 w-full border-gray-400 focus:border-primaryLight placeholder:text-sm focus:placeholder:text-gray-800 outline-none focus:ring-transparent border-0 border-b-[1px];
+    @apply py-1.5 px-0 mb-4 w-full border-gray-400 focus:border-primaryLight placeholder:text-sm focus:placeholder:text-gray-800 focus:text-gray-800 text-gray-500 outline-none focus:ring-transparent border-0 border-b-[1px];
   }
 }
 
