--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -84,3 +84,34 @@ body {
   width: 100%;
   height: 107%;
 }
+
+/**=====================================================**/
+/** Styles for Student Registration Images **/
+/**=====================================================**/
+
+.dashboard-menu-item-active {
+  position: relative;
+  z-index: 1;
+}
+.dashboard-menu-item-active::after {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: white;
+  transform: rotate(180deg);
+  top: -20px;
+  right: 0;
+  z-index: -1;
+}
+.dashboard-menu-item-active::before {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: white;
+  transform: rotate(180deg);
+  bottom: -20px;
+  right: 0;
+  z-index: -1;
+}
