--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -25,7 +25,7 @@
     @apply py-1.5 px-0 mb-4 w-full border-gray-400 focus:border-primaryLight placeholder:text-sm focus:placeholder:text-gray-800 focus:text-gray-800 text-gray-500 outline-none focus:ring-transparent border-0 border-b-[1px];
   }
   .grayDiv {
-    @apply bg-[#f1f1f1] px-8 rounded-xl;
+    @apply bg-[#f1f1f1] px-8 rounded-2xl;
   }
   .titleTab {
     @apply px-5 py-0.5 rounded-full w-fit;
@@ -144,7 +144,7 @@ td {
   padding-top: 20px;
 }
 .custom-td {
-  border-right: 2px solid #01B489;
+  border-right: 2px solid #01b489;
   border-bottom: none;
   padding-bottom: 5px;
   padding-top: 5px;
